[package]
name = "wasm-deep-diff"
version = "0.1.0"
authors = ["Jesper Hodge <jhodge@outlook.de>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"